assets/style.css
/* ... */
.element-text{
    font-family: "Poppins",sans-serif;
    padding-left: 20px;

}

.element{
    padding-top: 30px;
}

.notes{
    padding-top: 30px;
    font-family: "Poppins",sans-serif;
    color: white;
    line-height: 1.3;
    padding-bottom: 30px;
}

.notes-head{
    font-weight: bold;
}
.notes-desc{
    color: rgba(189, 189, 189, 0.82);
}

a{
    text-decoration: none;
}

@media only screen and (max-width: 900px) {

    body{
        width: 100vw;
        overflow-x: hidden;
    }
    .perfume-page-container{
        padding-right: 10px;
    }

    .perfume-info-name{
        font-family: 'Commune',serif;
        color: white;
        padding-top: 20px;
        margin-bottom: 20px;

    }

    .perfume-info{
        padding-left: 10px;

    }
    .perfume-page-image{
        margin: 0 auto;
        border-radius: 20px; /* Rounded corners for a softer look */
        transition: transform 0.3s ease; /* Add a hover effect */
        width: 380px; /* Set a fixed width */
        height: 380px; /* Set a fixed height for a 1:1 aspect ratio */
        object-fit: cover; /* Maintain aspect ratio and crop if necessary */
        padding-bottom: 0;
        float: none;
    }

    .logo-brand {
        font-family: "Commune", serif;
        padding-right: 0;
    }
    .perfume-page-info{
        margin: auto 0;
        padding: 0 30px;
    }

    .element-text{
        font-family: "Poppins",sans-serif;
        padding-left: 10px;
        font-size: 1rem;

    }

    .notes{
        padding-top: 30px;
        font-family: "Poppins",sans-serif;
        color: white;
        line-height: 1;
        padding-bottom: 30px;
    }

    .navbar{
        background-color: #121212;
        padding: 20px 0;
        font-family: "Poppins", sans-serif;
        border-bottom: solid 1px #e8dacd;
        margin: 0;
    }

    .hero{
        padding-left: 10px;
        padding-right: 10px;
    }


    .perfume-item img {
        margin: 0 auto; /* Center horizontally */
        border-radius: 20px; /* Rounded corners for a softer look */
        transition: transform 0.3s ease; /* Add a hover effect */
        display: block; /* Ensure it's treated as a block element */
        max-width: 100%; /* Ensure it doesn't exceed the container's width */
        width: 200px; /* Set a fixed width */
        height: 200px; /* Set a fixed height for a 1:1 aspect ratio */

        object-fit: cover; /* Maintain aspect ratio and crop if necessary */
    }

    .hero-cta{
        font-size: 15px;
    }
    .perfume-item {
        font-size: 15px;
        color: white;
        border-radius: 20px;
        margin-bottom: 20px;
        background-color: #181818;;
        transition: transform 0.3s ease-in-out; /* Use cubic-bezier for a smoother effect */
        height: 300px;
        width: auto;
    }

    .perfume-name{
        font-size: 18px;
    }


    .accord-bar{
        padding-left: 10px;
    }

}


/* Footer Styles */

footer {

    font-family: "Poppins", sans-serif;
    color: #ffffff;
    text-align: center;
    padding-top: 90px;
}

.logo-footer {
    height: 200px;
    width: 200px;
    position: relative;
    top: -65px;
    margin-top: 0; /* Add this line to remove any default margin */
}

.footer-content {
    display: flex;
    justify-content: space-around;
    flex-wrap: wrap;

}

footer a{
    color: white;
}

footer a:hover{
    color: white;
    text-shadow: 0 0 20px rgba(255, 255, 255, 1);
}

.quick-title{
    font-size: 19px;
    font-weight: 700;
    padding-bottom: 10px;
    letter-spacing: 2px; /* Adjust the value as needed */
}
.quick-links{
    line-height: 2.1;
    font-size: 16px;
    font-weight: 400;

}


/* Adjust the layout of social-media row to display items in a row */
.social-media {
    display: flex;
    flex-direction: row;
    align-items: center;
}







.copyright {
    margin-top: 20px;
    padding-bottom: 20px;
}

.accord-bar{
    padding-left: 20px;
}

/* Custom CSS to hide radio circle */




.select-button {
    color: white;
    background: rgba(84, 84, 84, 0);
    width: fit-content;
    border-radius: 90px;
    padding: 8px 16px; /* Adjust padding to your preference */
    margin-bottom: 40px;
    border: 1px solid white;
    cursor: pointer;
}

.select-button:hover,
.select-button:focus,
.select-button:active {
    color: #181818;
    background: white;
}

.select-button input[type="radio"] {
    display: none; /* Hide the actual radio input */
}

.select-button input[type="radio"]:checked + label {
    background: white;
    color: #181818;
}

.item {
    display: block; /* Initially display all items */
}

.loaded .item {
    transition: 0.5s; /* Add a transition for a smoother effect */

}

.about-us {
    z-index: 3;
    background: #1a1a1a;
    padding-top: 20px;
    padding-bottom: 20px;
    padding-left: 30px;
    padding-right: 30px;
    color: white;
    font-family: "Noto Serif Display", serif;
    font-weight: 300;
    margin-top: 30px;
    border-radius: 15px;
    opacity: 0; /* Initially set to invisible */
    transform: translateY(50px); /* Move it down 20px initially */
    transition: opacity 1s ease-in-out, transform 1s ease-in-out;
}

.about-us:hover {
    opacity: 0.9;
}

/* Add a class to trigger the animation when needed */
.show-about-us {
    opacity: 1; /* Make it visible */
    transform: translateY(0); /* Move it up to its position */
}

.our-team-heading{
    margin-top: 30px;
    text-align: center;
    color: white;
    z-index: -1;
    font-family: "Noto Serif Display", serif;
}

